--- a/game/index.html
+++ b/game/index.html
@@ -21,8 +21,7 @@
          <h1>Welcome Back!</h1>
          <h2 id='lastMoney'></h2>
          <button class="reg" onclick="restore()">Restore Save Data</button>
-         <button class="reg" onclick="resetSave()">Reset Save Data</button>
-      </div>
+          </div>
       <!-- acquire SCREEN =================================================-->
       <div id='acquireCard' style='opacity: 0;'class='save hide'>
          <h1>Negotiations</h1>
@@ -169,7 +168,7 @@
          <h3 class="subtitle">Welcome to the Laboratory!</h3>
          <br>
          <div id='subtractWallet'class='moneydisplay'>
-            <p id='confirm'class='item'> PayBud Balance</p>
+            <p id='confirm'class='item'> CoinAGE Balance</p>
             <i id='shopIcon' class=" item fas fa-wallet"></i>
             <h2 id='moneyshop'>0.00</h2>
          </div>
@@ -217,7 +216,7 @@
       <div style='background-attachment: fixed; background-image: url("../assets/img/flipback.png")'class='hide gamediv' id='comppannel'>
          <h3 class="subtitle">Control your company's income and cost.</h3>
          <div class='moneydisplay'>
-            PayBud Balance
+            coinAGE Balance
             <i id="walletBounty" class="fas fa-wallet"></i>
             <h2 style='font-style: normal;' id='money'>0.00</h2>
          </div>
