--- a/game/index.html
+++ b/game/index.html
@@ -216,7 +216,7 @@
       <div style='background-attachment: fixed; background-image: url("../assets/img/flipback.png")'class='hide gamediv' id='comppannel'>
          <h3 class="subtitle">Control your company's income and cost.</h3>
          <div class='moneydisplay'>
-            coinAGE Balance
+            coinAGE
             <i id="walletBounty" class="fas fa-wallet"></i>
             <h2 style='font-style: normal;' id='money'>0.00</h2>
          </div>
