--- a/game/index.html
+++ b/game/index.html
@@ -221,7 +221,7 @@
             <h2 style='font-style: normal;' id='money'>0.00</h2>
          </div>
          <div style='background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);'class='moneydisplay'>
-            Customers Served
+           coinAGE Customers Served
             <i class="fas fa-smile-beam"></i>
             <h2 style='font-style: normal'id='clicks'>0</h2>
          </div>
