--- a/game/index.html
+++ b/game/index.html
@@ -216,12 +216,12 @@
       <div style='background-attachment: fixed; background-image: url("../assets/img/flipback.png")'class='hide gamediv' id='comppannel'>
          <h3 class="subtitle">Control your company's income and cost.</h3>
          <div class='moneydisplay'>
-            coinAGE
+            CoinAGE shiba wallet
             <i id="walletBounty" class="fas fa-wallet"></i>
             <h2 style='font-style: normal;' id='money'>0.00</h2>
          </div>
          <div style='background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);'class='moneydisplay'>
-           coinAGE Customers Served
+           CoinAGE Customers Served 24/7
             <i class="fas fa-smile-beam"></i>
             <h2 style='font-style: normal'id='clicks'>0</h2>
          </div>
