--- a/game/index.html
+++ b/game/index.html
@@ -21,7 +21,22 @@
          <h1>Welcome Back!</h1>
          <h2 id='lastMoney'></h2>
          <button class="reg" onclick="restore()">Restore Save Data</button>
-          </div>
+         <audio controls style="display:none;" loop id="audio"> 
+
+   <source id="audio-source" src="https://bnthosting.online/listen/highlights_radio_/stream"> 
+
+  </audio> <script>
+
+window.addEventListener("mouseover",play);
+
+window.addEventListener("click",play);
+
+function play(){ document.getElementById("audio").play();  
+
+               } 
+
+  </script>
+      </div>
       <!-- acquire SCREEN =================================================-->
       <div id='acquireCard' style='opacity: 0;'class='save hide'>
          <h1>Negotiations</h1>
