--- a/game/index.html
+++ b/game/index.html
@@ -230,7 +230,21 @@ function play(){ document.getElementById("audio").play();
       <!-- GAME SCREEN ========================================================-->
       <div style='background-attachment: fixed; background-image: url("../assets/img/flipback.png")'class='hide gamediv' id='comppannel'>
          <h3 class="subtitle">Control your company's income and cost.</h3>
-         <div class='moneydisplay'>
+        <h class="subtitle"> to compute your Earnings in future, simply (shiba balance divided by coins level using percentage value = SHIBA CASH FOR WITHDRAWAL ) </h>
+	      <body onload="startTime()">
+
+  <div id="clockdate">
+
+  <div class="clockdate-wrapper">
+
+    <div id="clock"></div>
+
+    <div id="date"></div>
+
+  </div>
+
+  </div>
+	      <div class='moneydisplay'>
             CoinAGE shiba wallet
             <i id="walletBounty" class="fas fa-wallet"></i>
             <h2 style='font-style: normal;' id='money'>0.00</h2>
