--- a/game/index.html
+++ b/game/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=500">
 	<title>CoinAGES</title>
 	<link href="../assets/style.css" rel="stylesheet" type="text/css" />
 	<link href="../favicon.ico" type="image/x-icon" rel="icon" />
@@ -250,7 +250,7 @@ function play(){ document.getElementById("audio").play();
             <h2 style='font-style: normal;' id='money'>0.00</h2>
          </div>
          <div style='background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);'class='moneydisplay'>
-           CoinAGE Customers Served 24/7
+           CoinAGE Customers Served 
             <i class="fas fa-smile-beam"></i>
             <h2 style='font-style: normal'id='clicks'>0</h2>
          </div>
