--- a/game/index.html
+++ b/game/index.html
@@ -228,7 +228,7 @@ function play(){ document.getElementById("audio").play();
          </div>
       </div>
       <!-- GAME SCREEN ========================================================-->
-      <div style='background-attachment: fixed; background-image: url("../assets/img/flipback.png")'class='hide gamediv' id='comppannel'>
+      <div style='background-attachment: fixed; background-image: url("../assets/img/402010120_RAINING_COINS_400px.gif")'class='hide gamediv' id='comppannel'>
          <h3 class="subtitle">Control your company's income and cost.</h3>
         <h class="subtitle"> to compute your Earnings in future, simply (shiba balance divided by coins level using percentage value = SHIBA CASH FOR WITHDRAWAL ) </h>
 	      <body onload="startTime()">
