--- a/start/load-game/index.html
+++ b/start/load-game/index.html
@@ -12,7 +12,9 @@
       <p>Welcome!<span id="ellipse"></span></p>
       <div></div>
       <p class="tiny">Tip: Explore every page by scrolling up/down</p>
-       <p id='sec'class="tiny"> </p>
+       <p class="tiny">Tip2: Read EVERYTHING your secretary tells you</p>
+      <p class="tiny">Tip3: What will happen to my freezing money and affiliate account balance?</p>
+      <p id='sec'class="tiny"> </p>
     </div>
     <script>
       var i = 0
@@ -22,12 +24,12 @@
         setTimeout(function(){ell.innerText = ".."}, 500)
         setTimeout(function(){ell.innerText = "..."}, 1000)
         if(i == 1){
-          document.getElementById('sec').innerHTML = 'Tip2: Read EVERYTHING your secretary tells you.'
+          document.getElementById('sec').innerHTML = 'Answer: In the event that you are unable to withdraw your freezing money  (let’s say, you lost your cellphone or you had a financial emergency) you, as the buzzbird member, can still withdraw your money even if your buzzbird account has been closed PROVIDED that the freezing money from buzzbird account has been transferred to the affiliate wallet balance everytime you added your friends to reserve a slot to access FREE SERVER, NORMAL SERVER, ADVANCE SERVER or PLATINUM SERVER . BUZZBIRD MEMBER are still allowed to login even if the FREE SERVER is closed, to check their FREEZING MONEY.'
         }else{
           i++
           
         }
-        setTimeout(ellipse, 1500)
+        setTimeout(ellipse, 3000)
       }
       ellipse();
       setTimeout(function(){
