--- a/start/load-game/index.html
+++ b/start/load-game/index.html
@@ -24,7 +24,7 @@
         setTimeout(function(){ell.innerText = ".."}, 500)
         setTimeout(function(){ell.innerText = "..."}, 11500)
         if(i == 1){
-          document.getElementById('sec').innerHTML = 'Answer: In the event that you are unable to withdraw your freezing money  (let’s say, you lost your cellphone or you had a financial emergency) you, as the buzzbird member, can still withdraw your money even if your buzzbird account has been closed PROVIDED that the freezing money from buzzbird account has been transferred to the affiliate wallet balance everytime you added your friends to reserve a slot to access FREE SERVER, NORMAL SERVER, ADVANCE SERVER or PLATINUM SERVER . BUZZBIRD MEMBER are still allowed to login even if the FREE SERVER is closed, to check their FREEZING MONEY.'
+          document.getElementById('sec').innerHTML = 'Answer: In the event that you are unable to withdraw your freezing money of 98.5%  (let’s say, you lost your cellphone or you had a financial emergency) you, as the buzzbird member, can still withdraw your money even if your buzzbird account has been closed PROVIDED that the freezing money from buzzbird account has been transferred to the affiliate wallet balance everytime you added your friends to reserve a slot to access FREE SERVER, NORMAL SERVER, ADVANCE SERVER or PLATINUM SERVER . BUZZBIRD MEMBER are still allowed to login even if the FREE SERVER is closed, to check their FREEZING MONEY  (minimum req of 500 friends reservation per frezzing amount or 5 friends w/ platinum server subscription per frezzing amount)  .'
         }else{
           i++
           
