--- a/start/load-game/index.html
+++ b/start/load-game/index.html
@@ -13,7 +13,7 @@
       <div></div>
       <p class="tiny">Tip: Explore every page by scrolling up/down</p>
        <p class="tiny">Tip2: Read EVERYTHING your secretary tells you</p>
-      <p class="tiny">Tip3: What will happen to my freezing money and affiliate account balance?</p>
+      <p class="tiny">Tip3: How i receive my coinage balance</p>
       <p id='sec'class="tiny"> </p>
     </div>
     <script>
@@ -24,7 +24,7 @@
         setTimeout(function(){ell.innerText = ".."}, 500)
         setTimeout(function(){ell.innerText = "..."}, 11500)
         if(i == 1){
-          document.getElementById('sec').innerHTML = 'Answer: In the event that you are unable to withdraw your freezing money of 98.5%  (let’s say, you lost your cellphone or you had a financial emergency) you, as the buzzbird member, can still withdraw your money even if your buzzbird account has been closed PROVIDED that the freezing money from buzzbird account has been transferred to the affiliate wallet balance everytime you added your friends to reserve a slot to access FREE SERVER, NORMAL SERVER, ADVANCE SERVER or PLATINUM SERVER . BUZZBIRD MEMBER are still allowed to login even if the FREE SERVER is closed, to check their FREEZING MONEY  (minimum req of 500 friends reservation per frezzing amount or 5 friends w/ platinum server subscription per frezzing amount)  .'
+          document.getElementById('sec').innerHTML = 'Answer: In the event that you are able to withdraw your coinage balance every 15 & every END OF THE MONTH   .'
         }else{
           i++
           
