--- a/retire/index.html
+++ b/retire/index.html
@@ -26,8 +26,8 @@
       You flipped <span id="c"></span> <span> coins</span><br>
     </p>
     <p class="normal">Thank you for playing CoinAGES!</p><br>
-    <p class="normal">We hope you enjoyed it!<br><br>Votes and feedback on <a href="https://repl.it/talk/challenge/CoinAGES-or-100-ethical-and-legal-company-management-game/13105" class="standard">repl.it</a><br><br>would be greatly appreciated.</p>
-    <i style='font-family: Parisienne'>Made with ♡ by Raghav & Lehuy</i>
+    <p class="normal">We hope you enjoyed it!<br><br>Votes and feedback on <a href="https://echozoneph.online" class="standard">ECHOZONE</a><br><br>would be greatly appreciated.</p>
+    <i style='font-family: Parisienne'>Made with ♡ by ECHOZONE</i>
     <style>
       html{
       }
