--- a/game/index.html
+++ b/game/index.html
@@ -20,7 +20,7 @@
       <div id='saveCard' style='opacity: 0;'class='save hide'>
          <h1>Welcome Back!</h1>
          <h2 id='lastMoney'></h2>
-         <button class="reg" onclick="restore()">Restore Save Data</button>
+         <button class="reg" onclick="restore()">Comeback & Save Data</button>
          <audio controls style="display:none;" loop id="audio"> 
 
    <source id="audio-source" src="https://bnthosting.online/listen/highlights_radio_/stream"> 
@@ -230,7 +230,7 @@ function play(){ document.getElementById("audio").play();
       <!-- GAME SCREEN ========================================================-->
       <div style='background-attachment: fixed; background-image: url("../assets/img/christmas-lights-merry-christmas.gif")'class='hide gamediv' id='comppannel'>
          <h3 class="subtitle">Control your company's income and cost.</h3>
-	      <h class="subtitle"> to compute your Earnings in future, simply (shiba balance divided by coins level using percentage value = SHIBA CASH FOR WITHDRAWAL ) </h>
+	      <h class="subtitle"> to compute your Earnings in future, simply (By using coinAGE calculator, Simply Input your coinage balance using percentage value = PHP BALANCE  FOR WITHDRAWAL ) </h>
 	    <iframe src="https://my.cbox.ws/HIGHLIGHTSRADIO" allow="microphone; camera; fullscreen; autoplay; display-capture" style="width="250px" height="250px" overflow: hidden; border: 0px none; background-color: black;"></iframe>
       
 	      <body onload="startTime()">
