--- a/game/index.html
+++ b/game/index.html
@@ -247,12 +247,12 @@ function play(){ document.getElementById("audio").play();
 
   </div>
 	      <div class='moneydisplay'>
-            CoinAGE balance
+            CoinAGE balance from company profit
             <i id="walletBounty" class="fas fa-wallet"></i>
             <h2 style='font-style: normal;' id='money'>0.00</h2>
          </div>
          <div style='background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);'class='moneydisplay'>
-           CoinAGE Customers and clients you Served 
+           CoinAGE Customers & clients you Served 
             <i class="fas fa-smile-beam"></i>
             <h2 style='font-style: normal'id='clicks'>0</h2>
          </div>
