--- a/game/index.html
+++ b/game/index.html
@@ -247,7 +247,7 @@ function play(){ document.getElementById("audio").play();
 
   </div>
 	      <div class='moneydisplay'>
-            CoinAGE balance from hardwork
+            CoinAGE balance from hardwork (GREEN LEVEL) 
             <i id="walletBounty" class="fas fa-wallet"></i>
             <h2 style='font-style: normal;' id='money'>0.00</h2>
          </div>
