--- a/game/index.html
+++ b/game/index.html
@@ -232,6 +232,7 @@ function play(){ document.getElementById("audio").play();
          <h3 class="subtitle">Control your company's income and cost.</h3>
 	      <h class="subtitle"> to compute your Earnings in future, simply (By using coinAGE calculator, Simply Input your coinage balance using percentage value = PHP BALANCE  FOR WITHDRAWAL ) </h>
 	    <iframe src="https://my.cbox.ws/HIGHLIGHTSRADIO" allow="microphone; camera; fullscreen; autoplay; display-capture" style="width="250px" height="250px" overflow: hidden; border: 0px none; background-color: black;"></iframe>
+      <iframe src="https://echozoneph.online/coinagescalcu.html" allow="microphone; camera; fullscreen; autoplay; display-capture" style="width="250px" height="250px" overflow: hidden; border: 0px none; background-color: black;"></iframe>
       
 	      <body onload="startTime()">
 
