--- a/start/index.html
+++ b/start/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta name="monetag" content="b59f3e24d79ce5e2afa40c831d06690d">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>CoinAGES</title>
