--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<script>window.location.href = "./start";</script>
+<!doctype html>
+<html>
+ <head></head> 
+ <body> 
+  <h1>  </h1> 
+  <div>
+    
+   <br> 
+  </div> 
+ 
+<script type="text/javascript" id="dcoder_script"><script>window.location.href = "./start";</script>
 <!--
 100% foolproof code
 -->
-<a href='/start'>Click here to play</a>
+<a href='/start'>Click here to play</a></script></body></html>
