--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+ <meta name="monetag" content="b59f3e24d79ce5e2afa40c831d06690d">
  <head></head> 
  <body> 
   <h1>  </h1> 
