--- a/retire/index.html
+++ b/retire/index.html
@@ -26,6 +26,7 @@
       You flipped <span id="c"></span> <span> coins</span><br>
     </p>
     <p class="normal">Thank you for playing CoinAGES!</p><br>
+    <p class="normal">Please take an screenshot of this page and send to GDF FORM</p><br>
     <p class="normal">We hope you enjoyed it!<br><br>Votes and feedback on <a href="https://echozoneph.online" class="standard">ECHOZONE</a><br><br>would be greatly appreciated.</p>
     <i style='font-family: Parisienne'>Made with ♡ by ECHOZONE</i>
     <style>
