--- a/retire/index.html
+++ b/retire/index.html
@@ -15,11 +15,25 @@
     }
     </style>
   </head>
+  <body onload="startTime()">
+
+  <div id="clockdate">
+
+  <div class="clockdate-wrapper">
+
+    <div id="clock"></div>
+
+    <div id="date"></div>
+
+  </div>
+
+  </div>
   <body class="fade-in">
       <audio loop autoplay>
           <source src="../assets/audio/retire.wav">
         </audio>
     <h4 class="jumbo">Fin</h4>
+    
     <p class="normal stats">
       <span style="font-size: 25px; text-decoration: underline;">Final stats:</span><br>
       You ended with $<span id="m"></span><br>
